tests/type-errors/no_assignment_for_argument.arl
archetype no_assignment_for_argument

entry exec (x : int) {
  effect {
    x := 0;
  }
}
